# gdeploy

./: .flake8  Makefile  README.md  pyproject.toml  sample.jsonnet
gdeploy/: __init__.py  cli.py  term.py
gdeploy/functions/: commands.py
gdeploy/gcloud/: cmd.py
gdeploy/helpers/: config_reader.py  utils.py
tests/: test_cmd.py  test_config_reader.py  test_utils.py
tests/data/: simple.jsonnet
