[tool.poetry]
name = "gdeploy"
version = "0.1.0"
description = ""
authors = ["Mark Stella <mark.stella@dpc.vic.gov.au>"]
readme = "README.md"

[tool.poetry.scripts]
gdeploy = 'gdeploy.cli:app'


[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
python-semantic-release = "^7.19.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    'gdeploy/__init__.py:__version__',
    'pyproject.toml:version',
]
branch = "main"
upload_to_pypi = false
patch_without_tag = true
version_source = "tag"
